--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "nodejs-chat-app",
 	"version": "1.0.0",
 	"description": "",
-	"main": "src/index.js",
+	"main": "index.js",
 	"scripts": {
 		"start": "node src/index.js",
 		"dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
